style.css
body {
  text-align: center;
  margin: 0;
  background-color: darkblue;
  background-image: url("backgroundimage.png");
  background-repeat: no-repeat;
  background-size: cover;
  overflow-x: hidden;
}

body::-webkit-scrollbar {
  appearance: none;
  width: 15;
  background: linear-gradient(to bottom, white, aliceblue)
}

body::-webkit-scrollbar-thumb {
  appearance: none;
  width: 15px;
  border-radius: 10px;
  background-color: #0051B8;
}


.frame {
  font-family: Arial;
  margin: 0 auto;
  padding: 100px;
  background: skyblue;
  width: 1000px;
  text-align: left;
  border: none;
  border-radius: 5px;
  box-shadow: 0px 0px 5px 5px rgb(30, 128, 209);
}

.frame ol {
  margin-left: 0px;
}

.frame ol li {
  margin-bottom: 5px;
}


.firstFrameFlexBox {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.firstFrameFlexBox img {
  width: 370px;
  height: 300px;
  background-color: black;
  object-fit: cover;
}

@media (max-width:400px) {
  .frame {
    width: 240px;
    padding: 30px
  }

}

.frame:hover {
  background-color: rgb(139, 210, 238);
}

textarea {
  resize: none;
}

button {
  cursor: pointer;
  box-shadow: 2px 2px 4px rgb(115, 115, 177);
  border-radius: 0;
  border-color: blue;
  background-color: white;
}

#viewCode,
#share,
.searchBTN {
  width: 230px;
  box-shadow: 2px 2px 4px rgb(115, 115, 177);
  display: none;
}

button:hover {
  background-color: rgb(249, 241, 241);
}

.bar {
  padding: 10px;
  background-color: white;
  display: flex;
  justify-content: left;
  align-items: center;
  position: fixed;
  width: 100vw;
  z-index: 10;
  box-shadow: 0px 0px 3px 3px lightgray;
}

.bar nav {
  width: 100%;
  height: 20px;
  margin-right: 30px;
  display: flex;
  justify-content: right;
  align-items: center;
  gap: 5px;
}

.bar button {
  border-width: 1px;
  box-shadow: none;
  border-radius: 10px;
}

input:focus,
textarea:focus {
  outline: 0px;
}

.exploreButton {
  position: relative;
  width: 200px;
  height: 30px;
  background: #037cb4;
  font-family: arial;
  font-size: 16px;
  color: white;
  z-index: 0;
  overflow: hidden;
  border-style: solid;
  border-width: 2px;
  border-radius: 30px;
  border-color: rgb(1, 62, 141);
  box-shadow: inset 0px 0px 5px rgb(33, 77, 134);
}

.exploreButton:hover {
  background: #037cb4;
}

.exploreButton:before {
  content: "";
  width: 200px;
  height: 60px;
  background: rgba(217, 236, 253, 0.233);
  z-index: -1;
  position: absolute;
  top: 0px;
  left: 0px;
  transform: translate(13px) rotateZ(45deg);
}

.exploreButton:after {
  content: "";
  width: 200px;
  height: 60px;
  background: rgba(217, 236, 253, 0.233);
  z-index: 0;
  position: absolute;
  top: 0px;
  left: 0px;
  transform: translate(119px, 40px) rotateZ(-45deg);
}

@media(hover:hover) {
  .exploreButton:hover {
    transition: 1s;
    border-width: 1px;
    border-radius: 3px;
    border-color: white;
    box-shadow: none;
    text-indent: -120px;
  }

  .exploreButton:hover:before {
    content: "";
    transition: 0.5s;
    background: white;
    transform: translate(155px) rotateZ(45deg);
  }

  .exploreButton:hover:after {
    transition: 0.5s;
    content: "";
    background: white;
    transform: translate(121px, 0px) rotateZ(-45deg);
  }
}

.exploreButton:active {
  transition: 0.1s;
  text-indent: 110px;
}

.side-bar {
  position: fixed;
  bottom: 0;
  width: 0px;
  height: 100vh;
  background-color: rgb(226, 236, 245);
  transition: 1s;
  transition-property: width, left;
}

#submitButton {
  width: 100px;
  height: 35px;
  font-size: 20px;
  background-color: lightgreen
}

#submitButton:active {
  background-color: greenyellow;
  border-width: 1px;
}

#formContent {

  width: 70vw;
  height: 300px;
  resize: none;
  font-size: 25px;
  border-width: 2px;
  border-radius: 0px;
  border-color: blue;


}

#nameInput {
  border-width: 2px;
  border-radius: 0px;
  border-color: blue;
  width: 220px;
  height: 30px;
  font-family: arial;
  font-size: 25px;
}

#status {
  margin-left: 20px;
  color: blue;
  font-size: 20px;
}

.HiddenURLButton {
  display: none;
}

.bottombar {
  position: fixed;
  background-color: aliceblue;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 35px;
  font-family: arial;
  display: flex;
  justify-content: space-between;
  align-items: center;
  user-select: none;
}

a:visited {
  color: blue;
}

